--- a/before_u.html
+++ b/before_u.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="EN">
 <head>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -36,7 +36,7 @@
 
     <div class="navbar navbar-expand-lg navbar-dark bg-dark bg-primary md-3">
       <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -145,8 +145,8 @@
 
               <div class="heading">Can you spot the barriers?</div>
               <p><img style="float:left;max-width:200px;margin-right:10px" src="images/8675309-block.jpg"/> There are at least 18 accessibility issues on this page.
-                To see a list of all known issues, <a href="issues.html">click here</a>.
-                To see a more accessible version of this same page, <a href="after_u.html">click here</a>.
+                To see a list of all known issues, <a href="issues.html" style="color: blue; text-decoration: underline;">click here</a>.
+                To see a more accessible version of this same page, <a href="after_u.html" style="color: blue; text-decoration: underline;>click here</a>.
                 To view a popup list of accessibility issues:</p>
                 <a class="btn btn-primary" href="cheatsheet.html">click here</a>
 
@@ -226,13 +226,13 @@
               <div class="events box">
                 <div class="heading">Events</div>
 
-                <h6>December 1</h6>
-                <h5><a href="#">A great holiday event</a></h4>
+                <h5>December 1</h5>
+                <h6><a href="#">A great holiday event</a></h6>
 
                 <p>Don't miss this event.</p>
                 <img class="hr" src="images/hr.png" alt="horizontal line graphic">
-                <h6>December 31</h6>
-                <h5><a href="#">New years eve party</a></h4>
+                <h5>December 31</h5>
+                <h6><a href="#">New years eve party</a></h6>
                 <p>Ring in the new year with your friends</p>
                 <img class="hr" src="images/hr.png" alt="horizontal line graphic">
               </div>
