--- a/before_u.html
+++ b/before_u.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="EN">
 <head>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -145,8 +145,8 @@
 
               <div class="heading">Can you spot the barriers?</div>
               <p><img style="float:left;max-width:200px;margin-right:10px" src="images/8675309-block.jpg"/> There are at least 18 accessibility issues on this page.
-                To see a list of all known issues, <a href="issues.html">click here</a>.
-                To see a more accessible version of this same page, <a href="after_u.html">click here</a>.
+                To see a list of all known issues, <a href="issues.html" style="color: blue; text-decoration: underline;">click here</a>.
+                To see a more accessible version of this same page, <a href="after_u.html" style="color: blue; text-decoration: underline;">click here</a>.
                 To view a popup list of accessibility issues:</p>
                 <a class="btn btn-primary" href="cheatsheet.html">click here</a>
 
