--- a/before_u.html
+++ b/before_u.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="EN">
+<html lang="en">
 <head>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -45,9 +45,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Home</a>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown" tabindex="0" aria-haspopup="true" aria-expanded="false">
               <a class="nav-link dropdown-toggle" href="#"
-                  data-toggle="dropdown">
+                  data-toggle="dropdown" aria-controls="dropdownMenu"id="dropdownMenuLink">
                   About
               </a>
               <ul class="dropdown-menu">
