--- a/before_u.html
+++ b/before_u.html
@@ -45,22 +45,22 @@
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#" aria-current="page">Home</a>
-          </li>
+            </li>
             <li class="nav-item dropdown" tabindex="0" aria-haspopup="true" aria-expanded="false">
               <a class="nav-link dropdown-toggle" href="#"
                   data-toggle="dropdown" aria-controls="dropdownMenu"id="dropdownMenuLink">
                   About
               </a>
               <ul class="dropdown-menu" id="dropdownMenu" role="menu">
-                <li role="menuitem"><a class="dropdown-item" href="#">News</a></li>
-                <li role="menuitem"><a class="dropdown-item" href="#">Governance</a></li>
-                <li role="menuitem"><a class="dropdown-item" href="#">Diversity</a></li>
-                <li role="menuitem"><a class="dropdown-item" href="#">Contact Us</a></li>
+                <li role="none"><a class="dropdown-item" href="#">News</a></li>
+                <li role="none"><a class="dropdown-item" href="#">Governance</a></li>
+                <li role="none"><a class="dropdown-item" href="#">Diversity</a></li>
+                <li role="none"><a class="dropdown-item" href="#">Contact Us</a></li>
             </ul>
-        </li>
+            </li>
         
-        <li class="nav-item dropdown" tabindex="1" aria-haspopup="true" aria-expanded="false">
-          <a class="nav-link dropdown-toggle" href="#" 
+            <li class="nav-item dropdown" tabindex="1" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" 
               data-toggle="dropdown" 
               aria-controls="academicsDropdown" 
               id="academicsDropdownLink">
@@ -351,7 +351,7 @@
     <button class="btn btn-primary" type="button" id="modalOkButton">OK</button>
   </div>
 
-  <div id="footer" role="bottom" aria-foo="yes"><span>.</div>
+  <div id="footer" role="bottom" aria-foot="yes"><span>.</div>
   
 </body>
 </html>
