--- a/before_u.html
+++ b/before_u.html
@@ -67,10 +67,10 @@
               Academics
           </a>
           <ul class="dropdown-menu" id="academicsDropdown" role="menu">
-              <li role="menuitem"><a class="dropdown-item" href="#">Degree Programs</a></li>
-              <li role="menuitem"><a class="dropdown-item" href="#">AU Faculty</a></li>
-              <li role="menuitem"><a class="dropdown-item" href="#">Distance Learning</a></li>
-              <li role="menuitem"><a class="dropdown-item" href="#">Libraries</a></li>
+              <li role="none"><a class="dropdown-item" href="#">Degree Programs</a></li>
+              <li role="none"><a class="dropdown-item" href="#">AU Faculty</a></li>
+              <li role="none"><a class="dropdown-item" href="#">Distance Learning</a></li>
+              <li role="none"><a class="dropdown-item" href="#">Libraries</a></li>
           </ul>
           <li class="nav-item dropdown" tabindex="2" aria-haspopup="true" aria-expanded="false">
             <a class="nav-link dropdown-toggle" href="#" 
@@ -80,10 +80,10 @@
                 Admissions
             </a>
             <ul class="dropdown-menu" id="admissionsDropdown" role="menu">
-                <li role="menuitem"><a class="dropdown-item" href="#">Undergraduate</a></li>
-                <li role="menuitem"><a class="dropdown-item" href="#">Graduate</a></li>
-                <li role="menuitem"><a class="dropdown-item" href="#">Tuition</a></li>
-                <li role="menuitem"><a class="dropdown-item" href="#">Financial Aid</a></li>
+                <li role="none"><a class="dropdown-item" href="#">Undergraduate</a></li>
+                <li role="none"><a class="dropdown-item" href="#">Graduate</a></li>
+                <li role="none"><a class="dropdown-item" href="#">Tuition</a></li>
+                <li role="none"><a class="dropdown-item" href="#">Financial Aid</a></li>
             </ul>
           </li>
           <li class="nav-item">
