--- a/before_u.html
+++ b/before_u.html
@@ -44,9 +44,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#" aria-current="page">Home</a>
+              <a class="nav-link" href="#" tabindex="0" aria-current="page">Home</a>
             </li>
-            <li class="nav-item dropdown" tabindex="0" aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item dropdown" tabindex="1" aria-haspopup="true" aria-expanded="false">
               <a class="nav-link dropdown-toggle" href="#"
                   data-toggle="dropdown" aria-controls="dropdownMenu"id="dropdownMenuLink">
                   About
@@ -59,7 +59,7 @@
             </ul>
             </li>
         
-            <li class="nav-item dropdown" tabindex="1" aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item dropdown" tabindex="2" aria-haspopup="true" aria-expanded="false">
             <a class="nav-link dropdown-toggle" href="#" 
               data-toggle="dropdown" 
               aria-controls="academicsDropdown" 
@@ -72,7 +72,7 @@
               <li role="none"><a class="dropdown-item" href="#">Distance Learning</a></li>
               <li role="none"><a class="dropdown-item" href="#">Libraries</a></li>
           </ul>
-          <li class="nav-item dropdown" tabindex="2" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item dropdown" tabindex="3" aria-haspopup="true" aria-expanded="false">
             <a class="nav-link dropdown-toggle" href="#" 
                 data-toggle="dropdown" 
                 aria-controls="admissionsDropdown" 
@@ -87,7 +87,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" aria-label="Visitors">Visitors</a>
+            <a class="nav-link" href="#" tabindex="4" aria-label="Visitors">Visitors</a>
           </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
