--- a/before_u.html
+++ b/before_u.html
@@ -137,13 +137,7 @@
               </div>
 
               <div class="heading">Bienvenido!</div>
-              <p>Accesible Universidad (UA) es una universidad ficticia, y esta es su
-                página de ficción. Esta página está diseñada para demostrar una variedad de
-                común de diseño web que se traducen en problemas de los visitantes con discapacidad
-                no poder acceder al contenido o las características de una página web.
-                Aunque el título en la parte superior de esta sección de la página
-                sugiere que AU puede ser una institución de bienvenida,
-                el diseño inaccesible de esta página envía el mensaje opuesto.
+              <p>Accesible Universidad (UA) is a fictional university, and this is its fictional page. This page is designed to demonstrate a variety of common web designs that translate into problems with visitors who cannot access the content or features of a web page. The title on the upper part of this section of the page suggests that AU may be a welcome institution, the inaccessible design of this page requires the posted message.
               </p>
 
               <div class="heading">Can you spot the barriers?</div>
